plugins {
    id 'java'
    id 'io.quarkus' version '3.30.6'
    id("io.freefair.lombok") version "9.2.0"
}

group = 'ch.nickl'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
    mavenLocal()
}

dependencies {
    implementation platform("io.quarkus.platform:quarkus-bom:3.30.6")

    implementation 'io.quarkus:quarkus-scheduler'
    implementation 'io.quarkus:quarkus-arc'
    implementation 'io.quarkus:quarkus-rest-client-jackson'
    implementation 'io.quarkus:quarkus-logging-json'
    implementation 'io.quarkus:quarkus-smallrye-context-propagation'
    implementation 'io.quarkus:quarkus-smallrye-fault-tolerance'

    implementation 'org.mapstruct:mapstruct:1.6.3'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

    testImplementation 'io.quarkus:quarkus-junit5'
    testImplementation 'io.quarkus:quarkus-junit5-mockito'
    testImplementation 'org.assertj:assertj-core:3.27.3'
}

compileJava {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-parameters'
}

test {
    useJUnitPlatform()
    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
    testLogging {
        events "passed", "skipped", "failed"
    }
}

tasks.withType(JavaExec).configureEach {
    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
}